1. Usunięte zbędne elementy z projektu 2. Testowo zmieniony kolor

--- a/app/src/main/res/menu/navigation.xml
+++ b/app/src/main/res/menu/navigation.xml
@@ -12,7 +12,7 @@
         android:title="Polecane" />
 
     <item
-        android:id="@+id/navigation_notifications"
+        android:id="@+id/navigation_profile"
         android:icon="@drawable/profile"
         android:title="Profil" />
 
