1. Dodana klasa serialu 2. Dodana zakładka dla głównej strony 3. Projekt kafelka 4. Klasy do architektury danych przeniesione do osobnego pakietu

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,6 +7,13 @@
     android:layout_height="match_parent"
     tools:context="com.oxbow.netbow.MainActivity">
 
+    <FrameLayout
+        android:id="@+id/frame_container"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginTop="15dp"
+        app:layout_behavior="@string/appbar_scrolling_view_behavior" />
+
     <android.support.design.widget.BottomNavigationView
         android:id="@+id/navigation"
         android:layout_width="0dp"
