--- a/app/src/main/res/layout/main_series.xml
+++ b/app/src/main/res/layout/main_series.xml
@@ -4,14 +4,16 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".MainListFragment">
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="TEST"/>
 <GridView
     android:id="@+id/seriesList"
     android:layout_height="match_parent"
     android:layout_width="match_parent"
     tools:listitem="@layout/item_main_series"
-    android:numColumns="2"/>
+    android:columnWidth="160dp"
+    android:layout_gravity="center"
+    android:gravity="center"
+    android:stretchMode="spacingWidthUniform"
+    android:horizontalSpacing="4dp"
+    android:verticalSpacing="5dp"
+    android:numColumns="auto_fit"/>
 </FrameLayout>
