--- a/app/src/main/res/layout/item_main_series.xml
+++ b/app/src/main/res/layout/item_main_series.xml
@@ -13,11 +13,11 @@
         android:scaleType="fitXY"/>
 
         <FrameLayout
+            android:id="@+id/littleLabel"
             android:layout_width="160dp"
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
             android:background="@color/opacityblack"
-            android:onClick="titleClick"
             android:layout_gravity="bottom">
             <LinearLayout
                 android:layout_width="match_parent"
@@ -47,6 +47,40 @@
                 android:layout_height="wrap_content" />
             </LinearLayout>
         </FrameLayout>
+
+    <RelativeLayout
+        android:id="@+id/itemDetails"
+        android:layout_width="160dp"
+        android:layout_height="240dp"
+        android:visibility="invisible"
+        android:gravity="center"
+        android:background="@color/opacityblack">
+        <TextView
+            android:id="@+id/bigTitle"
+            android:textSize="26sp"
+            android:textAllCaps="true"
+            android:textStyle="bold"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+        <RatingBar
+            android:id="@+id/tileRating"
+            android:layout_below="@id/bigTitle"
+            android:layout_width="wrap_content"
+            style="@style/Widget.AppCompat.RatingBar.Small"
+            android:rating="3.8"
+            android:numStars="5"
+            android:layout_height="wrap_content" />
+        <TextView
+            android:id="@+id/tileDescription"
+            android:layout_below="@id/tileRating"
+            android:textSize="14sp"
+            android:textAlignment="center"
+            android:justificationMode="inter_word"
+            android:textColor="#FFF"
+            android:maxEms="300"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+    </RelativeLayout>
     </RelativeLayout>
 
 <!--
