--- a/app/src/main/res/layout/main_series.xml
+++ b/app/src/main/res/layout/main_series.xml
@@ -4,6 +4,12 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".MainListFragment">
+    <ProgressBar
+        android:id="@+id/progessSerieList"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:visibility="gone"
+        android:layout_gravity="center"/>
 <GridView
     android:id="@+id/seriesList"
     android:layout_height="match_parent"
