1.Nałożony gradient na zdjęcie w tle dla ekranu szczegołów w celu czytelności tytułu nawet gdy zdjęcie jest białe 2.Dodane ikony dla paska nawigacji 3.Dodany okrągły przycisk z tłem w kolorze akcentu 4.Dodany przycisk usuwający lub dodający serial do listy życzeń użytkownika

--- a/app/src/main/res/menu/navigation.xml
+++ b/app/src/main/res/menu/navigation.xml
@@ -4,7 +4,7 @@
 
     <item
         android:id="@+id/navigation_home"
-        android:icon="@drawable/ic_home_black_24dp"
+        android:icon="@drawable/serieicon"
         app:showAsAction="ifRoom"
         android:title="Seriale" />
     <item
@@ -15,7 +15,7 @@
 
     <item
         android:id="@+id/navigation_recommended"
-        android:icon="@drawable/ic_dashboard_black_24dp"
+        android:icon="@drawable/recommendsicon"
         app:showAsAction="always|withText"
         android:title="Polecane" />
 
