--- a/app/src/main/res/layout/activity_serie_details.xml
+++ b/app/src/main/res/layout/activity_serie_details.xml
@@ -32,6 +32,10 @@
                 app:layout_collapseParallaxMultiplier="0.4"
                 app:layout_scrollFlags = "scroll|enterAlways|enterAlwaysCollapsed"
                 android:scaleType="centerCrop"/>
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:background="@drawable/details_background_gradient"/>
             <android.support.v7.widget.Toolbar
                 android:id="@+id/toolbar"
                 android:layout_width="match_parent"
@@ -43,7 +47,7 @@
     </android.support.design.widget.AppBarLayout>
 
     <include layout="@layout/content_serie_details" />
-
+<!--
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/fab"
         android:layout_width="wrap_content"
@@ -52,5 +56,6 @@
         app:layout_anchor="@id/app_bar"
         app:layout_anchorGravity="bottom|end"
         app:srcCompat="@android:drawable/ic_dialog_email" />
+        -->
 
 </android.support.design.widget.CoordinatorLayout>
