--- a/app/src/main/res/layout/content_serie_details.xml
+++ b/app/src/main/res/layout/content_serie_details.xml
@@ -7,7 +7,7 @@
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context=".SerieDetails"
     tools:showIn="@layout/activity_serie_details">
-<FrameLayout
+<RelativeLayout
     android:layout_width="match_parent"
     android:layout_height="match_parent">
     <ProgressBar
@@ -16,11 +16,26 @@
         android:layout_height="30dp"
         android:visibility="gone"
         android:layout_gravity="center"/>
+    <ToggleButton
+        android:layout_width="wrap_content"
+        android:layout_height="30dp"
+        android:layout_alignParentRight="true"
+        style="@style/Widget.AppCompat.Button.Borderless"
+        android:background="@drawable/wishlistoggle"
+        android:textSize="12sp"
+        android:paddingRight="10dp"
+        android:paddingLeft="10dp"
+        android:textOn="dodano do listy życzeń"
+        android:textOff="+ dodaj do listy życzeń"
+        android:layout_marginBottom="5dp"
+        android:layout_marginTop="5dp"
+        android:layout_marginRight="2dp"
+        tools:ignore="HardcodedText,RtlHardcoded" />
+    <!--
     <TextView
         android:id="@+id/fullDescription"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_margin="@dimen/text_margin"
-         />
-</FrameLayout>
+        android:layout_margin="@dimen/text_margin" /> -->
+</RelativeLayout>
 </android.support.v4.widget.NestedScrollView>
