--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,4 +4,5 @@
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#15cf68</color>
     <color name="opacityblack">#70000000</color>
+    <color name="transparent">#00000000</color>
 </resources>
