1. Zmieniony super system logowania na Firebase Auth [*] 2. Od teraz logowanie e-mailem 3. Zmienione odpowiednio placeholdery (login => e-mail) 4. Wstęp do ekranu profilu

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -34,7 +34,7 @@
     android:layout_height="wrap_content"
     android:layout_marginLeft="30dp"
     android:layout_marginRight="30dp"
-    android:hint="login"
+    android:hint="e-mail"
     android:layout_marginBottom="20dp"/>
     <EditText
         android:id="@+id/passwordLogin"
@@ -73,7 +73,7 @@
             android:layout_height="wrap_content"
             android:layout_marginLeft="30dp"
             android:layout_marginRight="30dp"
-            android:hint="login"
+            android:hint="e-mail"
             android:layout_marginBottom="20dp"/>
 
         <EditText
