--- a/app/src/main/res/layout/activity_serie_details.xml
+++ b/app/src/main/res/layout/activity_serie_details.xml
@@ -44,7 +44,7 @@
             <android.support.v7.widget.Toolbar
                 android:id="@+id/toolbar"
                 android:layout_width="match_parent"
-                android:layout_height="@dimen/actionBarSize"
+                android:layout_height="wrap_content"
                 app:layout_collapseMode="pin"
                 app:popupTheme="@style/AppTheme.PopupOverlay"
                 app:contentInsetLeft="0dp"
