--- a/app/src/main/res/layout/item_main_series.xml
+++ b/app/src/main/res/layout/item_main_series.xml
@@ -29,7 +29,7 @@
                 android:textAllCaps="true"
                 android:textStyle="bold"
                 android:textColor="#FFFFFF"
-
+                android:fontFamily="@font/bebas"
                 android:autoSizeTextType="uniform"
                 android:layout_marginTop="5dp"
                 android:layout_marginLeft="5dp"
@@ -42,6 +42,7 @@
                 android:textSize="15sp"
                 android:textAllCaps="true"
                 android:textColor="#FFFFFF"
+                android:fontFamily="@font/bebas"
                 android:layout_marginLeft="5dp"
                 android:layout_marginBottom="5dp"
                 android:layout_height="wrap_content" />
@@ -60,6 +61,7 @@
             android:textSize="26sp"
             android:textAllCaps="true"
             android:textStyle="bold"
+            android:fontFamily="@font/bebas"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
         <RatingBar
